Set height for main section to fix spacing issues.

--- a/styles.css
+++ b/styles.css
@@ -226,6 +226,7 @@ footer p {
 @media only screen and (min-width: 768px) {
   main {
     width: 100%;
+    height: 700px;
     display: grid;
     grid-template-columns: 437px 331px;
   }
